--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
   <ul class="menu">
-    <li><a href="index.html#/refresh">Terug</a></li>
+    <li><a href="index.html">Terug</a></li>
   </ul>
 
   <!--[if lt IE 7]>
